--- a/examples/toy/CMakeLists.txt
+++ b/examples/toy/CMakeLists.txt
@@ -9,4 +9,5 @@ endmacro(add_toy_chapter name)
 add_subdirectory(Ch1)
 add_subdirectory(Ch2)
 add_subdirectory(Ch3)
+add_subdirectory(Ch4)
 add_subdirectory(Ch5)
