Add pass to elimination dead non-main functions in toy after inlining

--- a/examples/toy/Ch4/CMakeLists.txt
+++ b/examples/toy/Ch4/CMakeLists.txt
@@ -22,6 +22,7 @@ add_toy_chapter(toyc-ch4
   mlir/Dialect.cpp
   mlir/ToyCombine.cpp
   mlir/ShapeInferencePass.cpp
+  mlir/DeadFunctionEliminationPass.cpp
   )
 
 add_dependencies(toyc-ch4 ToyCh4OpsIncGen)
